--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
                 <a class="nav-link home" href="index.html">Home<span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link portfolio" href="#">Browse</a>
+                <a class="nav-link portfolio" href="browse.html">Browse</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link revies" href="#">Contact Us</a>
+                <a class="nav-link revies" href="contact.html">Contact Us</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link about" href="#">Account</a>
+                <a class="nav-link about" href="about.html">About Us</a>
               </li>
             </div>
           </ul>
@@ -57,30 +57,38 @@
             <div class="container">
               <div class="row">
                 <div class="col-sm">
-                  <img src='images/fantasy.jpg' class="gimages" width="300" height="300"/>
+
                   <div class="genre-object">
-                    <p class='genre'>Fantasy</p>
+                    <img src='images/fantasy.jpg' class="gimages" width="300" height="300"/>
+                    <a href="genres\fantasy.html" class='genre'>Fantasy</a>
                   </div>
-                  <img src='images/Science-Fiction.jpg' class="gimages" width="300" height="300"/>
+
                   <div class="genre-object">
-                    <p class='genre'>Science Fiction</p>
+                    <img src='images/Science-Fiction.jpg' class="gimages" width="300" height="300"/>
+                    <a href="genres\scifi.html" class='genre'>Science Fiction</a>
                   </div>
+                  
                 </div>
                 <div class="col-sm">
-                  <img src='images/Historical-Fiction.jpg' class="gimages" width="300" height="300"/>
+
                   <div class="genre-object">
-                    <p class='genre'>Historical Fiction</p>
+                    <img src='images/Historical-Fiction.jpg' class="gimages" width="300" height="300"/>
+                    <a href='genres\hifi.html' class='genre'>Historical Fiction</a>
                   </div>
+
                 </div>
                 <div class="col-sm">
-                  <img src='images/Academia.png' class="gimages" width="300" height="300"/>
+
                   <div class="genre-object">
-                    <p class='genre'>Academia</p>
+                    <img src='images/Academia.png' class="gimages" width="300" height="300"/>
+                    <a href='genres\academia.html' class='genre'>Academia</a>
                   </div>
-                  <img src='images/non-fiction.png' class="gimages" width="300" height="300"/>
+
                   <div class="genre-object">
-                    <p class='genre'>General Non-fiction</p>
+                    <img src='images/non-fiction.png' class="gimages" width="300" height="300"/>
+                    <a href='genres\nonfi.html' class='genre'>General Non-fiction</a>
                   </div>
+
                 </div>
               </div>
             </div>
@@ -89,10 +97,7 @@
     <div class="footer">
       <hr/>
 
-        <a href='?'>Writing Resources</a>
-        <a href='?'>Connect with a Peer</a>
-        <a href='?'>Talk with an Editor</a>
-        <a href='?'>Publisher Index</a>
+        <a href='?' class='repos'>Github repository</a>
 
       <hr/>
     </div>
