--- a/about.html
+++ b/about.html
@@ -37,19 +37,31 @@
     <div class='page'>
 
       <h2>Our Philosophy</h2>
-      <p>this is our philosophy</p>
-      <p>We might have a second paragraph here</p>
-      <p>Our vision is for you to...</p>
+      <div class='boxin'>
+      <p>We believe that anyone can be a great writer, if they write in the right enviornment.
+      Kenneth A. Bruffee once said that writing is just thought or conversation displaced, and
+      that to get better at it, you need to get better at conversing and thinking too. Here at the
+      Writer's Hub, we hope to create a place where anyone can write, converse, and think with their peers.
+      By breaking down barriers and bringing great minds together, we hope to unleash the writer in everyone.</p>
 
+      <p>"The most powerful words in English are 'Tell me a story,' words that are intimately related to the
+        complexity of history, the origins of language, the continuity of the species, the taproot of our humanity,
+         our singularity, and art itself"<br/>-Pat Conroy</p>
+
+      <p>Our vision is for you to write as much as you can, and to interact with the community. We sincerely hope that
+        you will find what you need to begin expressing yourself at the highest level possible.</p>
+      </div>
+    <div class='linkbox'>
       <a href='contact.html' class='bigLink'>Contact Us</a>
       <a href='index.html' class='bigLink'>Make an Account</a>
+    </div>
 
     </div>
 
     <div class="footer">
       <hr/>
 
-        <a href='?' class='repos'>Github repository</a>
+        <a href='https://github.com/jparmleycoding/creativeProject1' class='repos'>Github repository</a>
 
       <hr/>
     </div>
