--- a/contact.html
+++ b/contact.html
@@ -49,11 +49,11 @@
       </div>
 
     </div>
-    
+
     <div class="footer">
       <hr/>
 
-      <a href='?' class='repos'>Github repository</a>
+      <a href='https://github.com/jparmleycoding/creativeProject1' class='repos'>Github repository</a>
 
       <hr/>
     </div>
