--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <img src='images/Science-Fiction.jpg' class="gimages" width="300" height="300"/>
                     <a href="genres\scifi.html" class='genre'>Science Fiction</a>
                   </div>
-                  
+
                 </div>
                 <div class="col-sm">
 
@@ -97,7 +97,7 @@
     <div class="footer">
       <hr/>
 
-        <a href='?' class='repos'>Github repository</a>
+        <a href='https://github.com/jparmleycoding/creativeProject1' class='repos'>Github repository</a>
 
       <hr/>
     </div>
