--- a/browse.html
+++ b/browse.html
@@ -46,35 +46,38 @@
         <div class='spotlight'>
 
           <div class='indivSpot'>
-            <div class='person'>
-              <img src='images\review2.jpg' width="200" height="200" class='writer'/>
-            </div>
-            <p class='winfo'>This is the bio!</p>
+              <img src='images\review2.jpg' width="100" height="100" class='writer'/>
+            <p class='winfo'>Cool Girl McKell<br/><br/>
+            Cool Girl is really cool. She writes cool fantasy, works on cool academic papers, and edits cool projects.
+            She just oozes cool. Check out her new fantasy short story, "Campaign for Cool" on her page <a href=?>here!</a></p>
           </div>
 
           <div class='indivSpot'>
-            <div class="person">
-              <img src='images\cool-guy.jpg' width="200" height="200" class='writer'/>
-            </div>
-            <p class='winfo'>This is the bio!</p>
+              <img src='images\cool-guy.jpg' width="100" height="100" class='writer'/>
+            <p class='winfo'>Cool Guy McGee<br/><br/>
+            Cool Guy is really cool. He writes cool fantasy, works on cool academic papers, and edits cool projects.
+            He just oozes cool. Check out his new fantasy short story, "Quest for Cool" on his page <a href=?>here!</a></p>
           </div>
 
         </div>
+      </div>
 
+      <div class="GList">
         <h2>Genre List</h2>
         <ul>
-          <li>1</li>
-          <li>2</li>
-          <li>3</li>
+          <li class="genreList">Fantasy</li>
+          <li class="genreList">Academia</li>
+          <li class="genreList">Sc-fi</li>
+          <li class="genreList">Historical Fiction</li>
+          <li class="genreList">Non-Fiction</li>
         </ul>
-
       </div>
 
 
     <div class="footer">
       <hr/>
 
-      <a href='?' class='repos'>Github repository</a>
+      <a href='https://github.com/jparmleycoding/creativeProject1' class='repos'>Github repository</a>
 
       <hr/>
     </div>
